# job-board-django-react

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/apps/: __init__.py
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/applications/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/applications/migrations/: 0001_initial.py
backend/apps/jobs/: __init__.py  admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/jobs/management/commands/: seed.py
backend/apps/jobs/migrations/: 0001_initial.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/tests/: __init__.py  factories.py  test_accounts.py  test_applications.py  test_jobs.py
docs/: ARCHITECTURE.md
frontend/: README.md  index.html  package.json  rsbuild.config.ts  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/api/: applications.ts  auth.ts  jobs.ts
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  RootLayout.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Spinner.tsx  Textarea.tsx  Toast.tsx  Toaster.tsx  useToast.ts
frontend/src/features/applications/: ApplyModal.tsx  MyApplicationsPage.tsx  (+1 more)
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx
frontend/src/routes/: guards.tsx  index.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
(+11 files in other folders)
